# Anime-Sama-Downloader

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
gui/: __main__.py  cached.py  cloudflare.py  config.py  daemon.py  utils.py
gui/routers/: api.py  web.py
gui/static/: base.css  styles.css
gui/storage/: anime_data.py
gui/templates/: dashboard.html  detail.html  planning.html  planning_cards.html  settings.html
gui/utils/: cached.py  cloudflare.py  config.py  utils.py
src/: var.py
src/gui/: __main__.py  daemon.py
src/gui/routers/: api.py  web.py
src/gui/static/: dashboard.css  detail.css  planning.css  settings.css
src/gui/templates/: dashboard.html  detail.html  planning.html  settings.html
src/gui/utils/: cached.py  cloudflare.py  config.py  error.py  logger.py  utils.py
src/utils/: convert_with_ffmpeg.py  install_package.py  validate_anime_sama_url.py
src/utils/check/: check_ffmpeg_installed.py  check_package.py  is_cloudflare_here.py
src/utils/config/: config.json  config.py
src/utils/download/: download_episode.py  download_episode_with_fallback.py  download_gui.py  download_scan.py  download_video.py  downloader_video.py
src/utils/extract/: extract_anime_name.py  extract_hls_url.py  extract_last_video_source.py  extract_movearnpre_video_source.py  extract_oneupload_video_source.py  extract_packed_code_for_ts.py  (+4 more)
utils/: fetch.py  parsers.py  stuff.py  ts_to_mp4.py
utils/downloaders/: downloader.py  extractor.py
(+22 files in other folders)
